# apis-capstone

./: .gitignore  AGENTS.md  GAPS_DOCUMENTATION.md  Makefile  README.md  eval_dataset.json  mcp_config.json  procurement_agent.py  pyproject.toml
.agents/skills/fx-risk-assessor/: SKILL.md
.agents/skills/procurement-workflow/: SKILL(1).md
.agents/skills/tco-calculator/: SKILL(2).md
DATA/: Euro exchange_rates_weekly.csv  inventory_levels_weekly.csv  min_amountmax_amountfee_percentage.csv  procurement_additional_costs.csv  vendor_list.csv  vendor_prices_weekly.csv
